--- a/src/sales/templates/sales/create.html
+++ b/src/sales/templates/sales/create.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/sales/styles.css' %}">
+    <script src="https://unpkg.com/htmx.org@2.0.3" integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq" crossorigin="anonymous"></script>
     <title>DjangoHtmx | Sales</title>
 </head>
 <body>
@@ -31,12 +32,8 @@
                 {{ form.client.label_tag }}
                 {{ form.client.as_hidden }}
                 <div class="client-typing">
-                    <input type="text" name="client_name">
-                    <div class="client-list">
-                        {% for client in clients_list %}
-                            <p class="client-item" data-id="{{ client.pk }}">{{ client.fullname }}</p>
-                        {% endfor %}
-                    </div>
+                    <input type="text" name="client_name" id="client_name_binding" hx-get="{% url 'sales:create' %}" hx-trigger="keyup changed delay:100ms" hx-target="#client_list" hx-swap="outerHTML">
+                    {% include 'sales/components/clients_autocomplete.html' %}
                 </div>
             </div>
             <div>
